# paulaIA-api

./: Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt  send.py
app/: main.py
app/api/v1/: __init__.py  mlp3  router.py
app/api/v1/my_model5/: fingerprint.pb  keras_metadata.pb
app/api/v1/my_model5/variables/: variables.data-00000-of-00001  variables.index
app/domain/: services.py  services2.py  services3.py
