[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "A simple FastAPI template with DDD and Poetry."
authors = ["Your Name <your.email@makes.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.12, <3.10"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
tensorflow = "2.13.0"
numpy = "1.23.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"